[tool.poetry]
name = "stock_orders"
version = "0.1.0"
description = ""
authors = ["Jan Król <jk.jankrol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sortedcontainers = "^2.4.0"
mypy = "^1.8.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
